@@ -27,7 +27,7 @@ import junit.framework.TestCase;
 public class BeanToPropertyValueTransformerTestCase extends TestCase {
 
     private static final Integer expectedIntegerValue = Integer.valueOf(123);
-    private static final Long expectedLongValue = new Long(123);
+    private static final Long expectedLongValue = Long.valueOf(123);
     private static final Float expectedFloatValue = new Float(123.123f);
     private static final Double expectedDoubleValue = Double.valueOf(567879.12344d);
     private static final Boolean expectedBooleanValue = Boolean.TRUE;
