@@ -185,7 +185,7 @@ public class BeanUtilsTestCase extends TestCase {
                  new String[] { "New 0", "New 1", "New 2" });
         orig.set("intArray", new int[] { 100, 200, 300 });
         orig.set("intProperty", Integer.valueOf(333));
-        orig.set("longProperty", new Long(3333));
+        orig.set("longProperty", Long.valueOf(3333));
         orig.set("shortProperty", new Short((short) 33));
         orig.set("stringArray", new String[] { "New 0", "New 1" });
         orig.set("stringProperty", "Custom string");
@@ -899,7 +899,7 @@ public class BeanUtilsTestCase extends TestCase {
 */
         BeanUtils.setProperty(bean, "byteProperty", Integer.valueOf(123));
         assertEquals((byte) 123, bean.getByteProperty());
-        BeanUtils.setProperty(bean, "byteProperty", new Long(123));
+        BeanUtils.setProperty(bean, "byteProperty", Long.valueOf(123));
         assertEquals((byte) 123, bean.getByteProperty());
         BeanUtils.setProperty(bean, "byteProperty", new Short((short) 123));
         assertEquals((byte) 123, bean.getByteProperty());
@@ -982,7 +982,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getDoubleProperty(), 0.005);
         BeanUtils.setProperty(bean, "doubleProperty", Integer.valueOf(123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
-        BeanUtils.setProperty(bean, "doubleProperty", new Long(123));
+        BeanUtils.setProperty(bean, "doubleProperty", Long.valueOf(123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
         BeanUtils.setProperty(bean, "doubleProperty", new Short((short) 123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
@@ -1002,7 +1002,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getFloatProperty(), 0.005);
         BeanUtils.setProperty(bean, "floatProperty", Integer.valueOf(123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
-        BeanUtils.setProperty(bean, "floatProperty", new Long(123));
+        BeanUtils.setProperty(bean, "floatProperty", Long.valueOf(123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
         BeanUtils.setProperty(bean, "floatProperty", new Short((short) 123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
@@ -1024,7 +1024,7 @@ public class BeanUtilsTestCase extends TestCase {
 */
         BeanUtils.setProperty(bean, "longProperty", Integer.valueOf(123));
         assertEquals(123, bean.getIntProperty());
-        BeanUtils.setProperty(bean, "longProperty", new Long(123));
+        BeanUtils.setProperty(bean, "longProperty", Long.valueOf(123));
         assertEquals(123, bean.getIntProperty());
         BeanUtils.setProperty(bean, "longProperty", new Short((short) 123));
         assertEquals(123, bean.getIntProperty());
@@ -1046,7 +1046,7 @@ public class BeanUtilsTestCase extends TestCase {
 */
         BeanUtils.setProperty(bean, "longProperty", Integer.valueOf(123));
         assertEquals(123, bean.getLongProperty());
-        BeanUtils.setProperty(bean, "longProperty", new Long(123));
+        BeanUtils.setProperty(bean, "longProperty", Long.valueOf(123));
         assertEquals(123, bean.getLongProperty());
         BeanUtils.setProperty(bean, "longProperty", new Short((short) 123));
         assertEquals(123, bean.getLongProperty());
@@ -1079,7 +1079,7 @@ public class BeanUtilsTestCase extends TestCase {
 */
         BeanUtils.setProperty(bean, "shortProperty", Integer.valueOf(123));
         assertEquals((short) 123, bean.getShortProperty());
-        BeanUtils.setProperty(bean, "shortProperty", new Long(123));
+        BeanUtils.setProperty(bean, "shortProperty", Long.valueOf(123));
         assertEquals((short) 123, bean.getShortProperty());
         BeanUtils.setProperty(bean, "shortProperty", new Short((short) 123));
         assertEquals((short) 123, bean.getShortProperty());
@@ -1120,7 +1120,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals((byte) 123, bean.getByteProperty());
         BeanUtils.copyProperty(bean, "byteProperty", Integer.valueOf(123));
         assertEquals((byte) 123, bean.getByteProperty());
-        BeanUtils.copyProperty(bean, "byteProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "byteProperty", Long.valueOf(123));
         assertEquals((byte) 123, bean.getByteProperty());
         BeanUtils.copyProperty(bean, "byteProperty", new Short((short) 123));
         assertEquals((byte) 123, bean.getByteProperty());
@@ -1203,7 +1203,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getDoubleProperty(), 0.005);
         BeanUtils.copyProperty(bean, "doubleProperty", Integer.valueOf(123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
-        BeanUtils.copyProperty(bean, "doubleProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "doubleProperty", Long.valueOf(123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
         BeanUtils.copyProperty(bean, "doubleProperty", new Short((short) 123));
         assertEquals(123, bean.getDoubleProperty(), 0.005);
@@ -1223,7 +1223,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getFloatProperty(), 0.005);
         BeanUtils.copyProperty(bean, "floatProperty", Integer.valueOf(123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
-        BeanUtils.copyProperty(bean, "floatProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "floatProperty", Long.valueOf(123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
         BeanUtils.copyProperty(bean, "floatProperty", new Short((short) 123));
         assertEquals(123, bean.getFloatProperty(), 0.005);
@@ -1243,7 +1243,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getIntProperty());
         BeanUtils.copyProperty(bean, "longProperty", Integer.valueOf(123));
         assertEquals(123, bean.getIntProperty());
-        BeanUtils.copyProperty(bean, "longProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "longProperty", Long.valueOf(123));
         assertEquals(123, bean.getIntProperty());
         BeanUtils.copyProperty(bean, "longProperty", new Short((short) 123));
         assertEquals(123, bean.getIntProperty());
@@ -1263,7 +1263,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(123, bean.getLongProperty());
         BeanUtils.copyProperty(bean, "longProperty", Integer.valueOf(123));
         assertEquals(123, bean.getLongProperty());
-        BeanUtils.copyProperty(bean, "longProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "longProperty", Long.valueOf(123));
         assertEquals(123, bean.getLongProperty());
         BeanUtils.copyProperty(bean, "longProperty", new Short((short) 123));
         assertEquals(123, bean.getLongProperty());
@@ -1283,7 +1283,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals((short) 123, bean.getShortProperty());
         BeanUtils.copyProperty(bean, "shortProperty", Integer.valueOf(123));
         assertEquals((short) 123, bean.getShortProperty());
-        BeanUtils.copyProperty(bean, "shortProperty", new Long(123));
+        BeanUtils.copyProperty(bean, "shortProperty", Long.valueOf(123));
         assertEquals((short) 123, bean.getShortProperty());
         BeanUtils.copyProperty(bean, "shortProperty", new Short((short) 123));
         assertEquals((short) 123, bean.getShortProperty());
@@ -1314,7 +1314,7 @@ public class BeanUtilsTestCase extends TestCase {
         checkIntArray(bean.getNested().getIntArray(), intChanged);
 
         // Narrowing conversion required
-        BeanUtils.copyProperty(bean, "nested.intArray[1]", new Long(3));
+        BeanUtils.copyProperty(bean, "nested.intArray[1]", Long.valueOf(3));
         checkIntArray(bean.getIntArray(), origArray);
         intChanged[1] = 3;
         checkIntArray(bean.getNested().getIntArray(), intChanged);
@@ -1370,7 +1370,7 @@ public class BeanUtilsTestCase extends TestCase {
         assertEquals(2, bean.getNested().getIntProperty());
 
         // Narrowing conversion required
-        BeanUtils.copyProperty(bean, "nested.intProperty", new Long(3));
+        BeanUtils.copyProperty(bean, "nested.intProperty", Long.valueOf(3));
         assertNotNull(bean.getNested());
         assertEquals(0, bean.getIntProperty());
         assertEquals(3, bean.getNested().getIntProperty());
