@@ -113,7 +113,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
         listIndexed.add("String 3");
         listIndexed.add("String 4");
         bean.set("listIndexed", listIndexed);
-        bean.set("longProperty", new Long(321));
+        bean.set("longProperty", Long.valueOf(321));
         final HashMap<String, Object> mapProperty = new HashMap<>();
         mapProperty.put("First Key", "First Value");
         mapProperty.put("Second Key", "Second Value");
@@ -178,7 +178,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
         map.put("floatProperty", new Float((float) 222.0));
         map.put("intArray", new int[] { 0, 100, 200 });
         map.put("intProperty", Integer.valueOf(111));
-        map.put("longProperty", new Long(444));
+        map.put("longProperty", Long.valueOf(444));
         map.put("shortProperty", new Short((short) 555));
         map.put("stringProperty", "New String Property");
 
@@ -252,7 +252,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
         assertEquals("Value of 'intProperty'",
                      Integer.valueOf(123), map.get("intProperty"));
         assertEquals("Value of 'longProperty'",
-                     new Long(321), map.get("longProperty"));
+                     Long.valueOf(321), map.get("longProperty"));
         assertEquals("Value of 'shortProperty'",
                      new Short((short) 987), map.get("shortProperty"));
         assertEquals("Value of 'stringProperty'",
@@ -2107,7 +2107,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
             final long newValue = oldValue + 1;
             PropertyUtils.setNestedProperty(bean,
                     "nested.longProperty",
-                    new Long(newValue));
+                    Long.valueOf(newValue));
             assertEquals("Matched new value",
                     newValue,
                     nested.getLongProperty());
@@ -2412,7 +2412,7 @@ public class DynaPropertyUtilsTestCase extends TestCase {
             final long newValue = oldValue + 1;
             PropertyUtils.setSimpleProperty(bean,
                     "longProperty",
-                    new Long(newValue));
+                    Long.valueOf(newValue));
             assertEquals("Matched new value",
                     newValue,
                     ((Long) bean.get("longProperty")).longValue());
