@@ -115,7 +115,7 @@ public class FloatConverterTestCase extends NumberConverterTestBase<Float> {
             new Byte((byte)7),
             new Short((short)8),
             Integer.valueOf(9),
-            new Long(10),
+            Long.valueOf(10),
             new Float(11.1),
             Double.valueOf(12.2),
         };
